04_kind/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-app
  namespace: my-app
  labels:
    app: my-app
spec:
  containers:
    - name: my-app
      image: nginx
      ports:
        - containerPort: 80
