04_kind/pod_cm.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-app
  namespace: my-app
  labels:
    app: my-app
spec:
  containers:
    - name: my-app
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: /opt/my-app
          name: my-file
  volumes:
    - name: my-file
      configMap:
        name: my-app-config
        items:
          - key: MY_FILE
            path: my_file.txt
