04_kind/pod_pv.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-app
  namespace: my-app
  labels:
    app: my-app
spec:
  containers:
    - name: my-app
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: /tmp/my-app-pv
          name: my-pvc
  volumes:
    - name: my-pvc
      hostPath:
        path: /tmp/my-app-pv
