04_kind/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: service-nodeport
  name: service-nodeport
  namespace: my-app
spec:
  ports:
  - name: "my-app-nodeport"
    port: 80
    protocol: TCP
    targetPort: 32000
  selector:
    app: my-app
  type: NodePort
