04_kind/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: my-app
  labels:
    app: my-app
spec:
    ports:
      - name: my-app
        port: 80
        protocol: TCP
        targetPort: 80
    selector:
        app: my-app
