04_kind/ingress.yml
# here is a ingress example for myapp on myapp.local

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: my-app
  namespace: my-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 3000
